# structure_prototype

./: .gitignore  CMakeLists.txt  README.md  main.cpp  structure_prototype.h  test.cpp
